# belljar

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.ai  Dockerfile.dev  PLAN.md  README.md
.belljar/: pr-new.md  pr.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
app/tests/: cli_compose.rs  cli_cov.rs  cli_error_paths.rs  cli_fail_create.rs  cli_more.rs  cli_rm_down_fail.rs  cli_start_default_path.rs  cli_unknowns.rs  cli_wizard.rs  cli_workspace.rs  cli_worktree_fail.rs  tmux_cli.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: compose_errors.rs  core_negative.rs  tmux_errors.rs
docs/: spec.md
scripts/: coverage.sh
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: cli_smoke.rs  compose_discovery.rs  compose_discovery_root.rs  compose_up_down.rs  core_smoke.rs  git_worktree.rs  registry_prop.rs  tmux_helpers.rs  workspace_core.rs
