[package]
name = "par-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Rust CLI inspired by coplane/par with per-session docker-compose isolation"

[[bin]]
name = "belljar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
par-core = { path = "../core" }
dirs = "5.0"
