[package]
name = "par-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Core library for par-rs (config, session, compose, runner)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
directories = "5.0"
uuid = { version = "1.8", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros"] }
which = "6.0"
